app component updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <h1 class="">{{pageTitle}}</h1>
 
-
-<ang-interpolation></ang-interpolation>
-<ang-propertybinding></ang-propertybinding>
-<ang-classbinding></ang-classbinding>
-<ang-eventbinding></ang-eventbinding>
-<ang-templatereferencevariables></ang-templatereferencevariables>
-<ang-twowaybinding></ang-twowaybinding>
+<ang-routing></ang-routing>
+<ang-student-details></ang-student-details>
+<ang-student-list></ang-student-list>
+<ang-employee-details></ang-employee-details>
+<ang-employee-list></ang-employee-list>
+<ang-pipes></ang-pipes>
+<ang-parentcomponent></ang-parentcomponent>
+<ang-ngfordirective></ang-ngfordirective>
+<ang-ngswitchdirective></ang-ngswitchdirective>
 <ang-ngifdirective></ang-ngifdirective>
+<ang-twowaybinding></ang-twowaybinding>
+<ang-templatereferencevariables></ang-templatereferencevariables>
+<ang-eventbinding></ang-eventbinding>
+<ang-classbinding></ang-classbinding>
+<ang-propertybinding></ang-propertybinding>
+<ang-interpolation></ang-interpolation>
